# discord-ani-schedule

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
src/: main.rs
src/commands/: ani.rs  ani_list.rs  ani_schedule.rs  mod.rs
src/provider/: anilist.rs
src/util/: config.rs
