[package]
name = "discord-ani-schedule"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = "0.12"
poise = "0.6.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
env_logger = "0.10.0"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
